--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "cont"
+name = "my-cont"
 version = "0.1.0"
 description = ""
 authors = ["Pavel Kirilin <win10@list.ru>"]
@@ -10,10 +10,10 @@ python = "^3.11"
 pydantic = "^2.3.0"
 halo = "^0.0.31"
 docker = "^6.1.3"
-typer = {version = "^0.9.0", extras = ["all"]}
+typer = { version = "^0.9.0", extras = ["all"] }
 
 [tool.poetry.scripts]
-cont = "cont.__main__:main"
+cont = "my_cont.__main__:main"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.9.0"
